--- a/app/assets/stylesheets/todos.css.scss
+++ b/app/assets/stylesheets/todos.css.scss
@@ -13,3 +13,6 @@
 .well li {
 	margin-bottom: 5px;
 }
+#todos_checkbox_ {
+	margin-top: -.075em;
+}
